--- a/main.tex
+++ b/main.tex
@@ -505,7 +505,7 @@ Alors $\mu$ est proportionnelle à $m$.
 Solution: $\bullet$ Comme $\mu$ est une mesure, $\mu\left(\left(0,1\right]\right) = n\cdot \mu\left(\left(0,\frac 1n\right]\right)$ pour tout $n\geq 1$. Donc $\displaystyle \mu\left(\left(0,\frac 1n\right]\right) = \frac{\mu\left(\left(0,1\right]\right)}n$.\newline \newline
 $\bullet$ Soient $a=\frac pq$ et $b=\frac{p'}{q'}$ des rationnels avec $q,q'>0$ et $a<b$. Alors $$\begin{aligned}\mu\left(\left(a,b\right]\right) &= \mu\left(\left(0,b-a\right]\right) \\&= \mu\left(\left(0, \frac{p'q-pq'}{qq'}\right]\right) \\&= (p'q-pq')\mu\left(\left(0, \frac{1}{qq'}\right]\right)\\&=(p'q-pq') \frac{\mu\left(\left(0,1\right]\right)}{qq'}\\&= (b-a)\mu\left(\left(0,1\right]\right)\end{aligned}$$ \newline
 $\bullet$ Soit $a\in \mathbb R$. Comme $\displaystyle \{a\}=  \cap_n \left(a-\frac 1n, a\right]$, on peut trouver $N$ tel que une translation de $\displaystyle \left(a-\frac 1N, a\right]$ est dans l'intérieur de $B$, ce qui donne $\mu\left(\left(a-\frac 1N,a\right]\right) <\infty$, donc $$\mu\left(\{a\}\right)=\lim_n \mu\left(\left(a-\frac 1n, a\right]\right)=\lim_n \mu\left(\left(0, \frac 1n\right]\right)=\mu\left(\left(0,1\right]\right)\cdot 0 = 0 $$\newline
-$\bullet$ Soient $a,b\in \mathbb R$. Soit $a_n\in \mathbb Q^{\mathbb N}$ une suite croissante telle que $a_n\to a$ et $b_n$ décroissante telle que $b_n\to b$. Alors  $$\begin{align}\mu((a,b]) &= \mu ((a,b)) \\&= \mu(\cup_n(a_n,b_n))\\&=\lim_n \mu((a_n,b_n)) \\&= \lim_n \mu((a_n,b_n])\\&=(b_n-a_n)\mu((0,1]) \\ &= (b-a)\mu((0,1])\end{align}$$\newline
+$\bullet$ Soient $a,b\in \mathbb R$. Soit $a_n\in \mathbb Q^{\mathbb N}$ une suite croissante telle que $a_n\to a$ et $b_n$ décroissante telle que $b_n\to b$. Alors  $$\begin{aligned}\mu((a,b]) &= \mu ((a,b)) \\&= \mu(\cup_n(a_n,b_n))\\&=\lim_n \mu((a_n,b_n)) \\&= \lim_n \mu((a_n,b_n])\\&=(b_n-a_n)\mu((0,1]) \\ &= (b-a)\mu((0,1])\end{aligned}$$\newline
 $\bullet$ $\mu$ et $\mu((0,1])m$ coincident sur un $\pi$-système, par continuité croissante $\mu(\mathbb R) = \mu((0,1])m(\mathbb R)$ et $m$ est $\sigma$-finie. Donc $\mu$ et $\mu((0,1])m$ coincident sur la tribu engendrée par les $(a,b]$, donc sur la tribu des boréliens.\newline
 $\bullet$ Soit $A$ un Lebesgue-mesurable, $A=B\cup C$ où $B$ est borélien et $C$ un $m$-négligeable, de sorte que $m(A)=m(B)$. Il existe $D$ un borélien tel que $C\subset D$ et $m(D)=0$, donc $\mu(D)=0$. Alors $$\mu(B)\leq \mu(B\cup C)=\mu(A)\leq \mu(B\cup D)\leq \mu(B)+\mu(D) = \mu(B) $$ 
 D'où $\mu(A)=\mu(B) = \mu((0,1])m(B)=\mu((0,1])m(A)$. \newline
