--- a/main.tex
+++ b/main.tex
@@ -595,6 +595,20 @@ Soit $f:\mathbb R\to \mathbb R$ Lebesgue-mesurable. On écrit $f=f^+ - f^-$ avec
 
 \subsection{} \fbox{
 \parbox{0.9\textwidth}{Soit $f:\mathbb R\to \mathbb R$ dérivable. Montrer que $f$ et $f'$ sont Borel-mesurables.
-}}
+}}\\ \\
+
+Solution: $f$ étant dérivable, elle est continue, donc Borel-mesurable. On remarque que la suite de fonctions Borel-mesurables $g_n:x\to n\left( f\left(x+\frac 1n\right) -f(x)\right)$ converge simplement vers $f'$. Donc $f'$ est Borel-mesurable.
+
+\subsection{} \fbox{
+\parbox{0.9\textwidth}{ }}
+
+\subsection{} \fbox{
+\parbox{0.9\textwidth}{ }}
+
+\subsection{} \fbox{
+\parbox{0.9\textwidth}{ }}
+
+\subsection{} \fbox{
+\parbox{0.9\textwidth}{ }}
 
 \end{document}
