--- a/convdom.tex
+++ b/convdom.tex
@@ -54,25 +54,30 @@ On définit également  $$\begin{aligned}
 \end{aligned}$$\newline
 De même $\widetilde{g}$ et les $\widetilde{f_n}$ sont mesurables, avec \newline
 $\bullet$ $\int |\widetilde{g}| d\mu  = \int_E  |\widetilde{g}| d\mu + \int_{E^c}  |\widetilde{g}| d\mu =\int_E  |\widetilde{g}| d\mu = \int_E  |g| d\mu <\infty $ donc $\widetilde{g}$ intégrable. \newline
-$\bullet$ $\forall n\geq 1, |\widetilde{f_n}|\leq \widetilde{g}$ donc les $\widetilde{f_n}$ intégrables. \newline
-De $ |\widetilde{f_n}|\leq \widetilde{g}$ on tire  $|\widetilde{f}|\leq |\widetilde{g}|$ et $\widetilde{f}$ intégrable, ainsi que $g+\widetilde{f_n}\geq |\widetilde{f_n}| +\widetilde{f_n} \geq 0$. Le lemme de Fatou donne alors $$\begin{aligned} \int |\widetilde{f}| d\mu + \int |\widetilde{g}| d\mu  
-&=  \int |\widetilde{f}| +  |\widetilde{g}| d\mu \\
-&= \int \liminf \left(|\widetilde{f_n}|\right) +  \liminf|\widetilde{g}| d\mu\\
-&\leq \int \liminf \left( |\widetilde{f_n}| +  |\widetilde{g}| \right)d\mu \quad \text{intégration d'une inégalité entre fonctions positives} \\
-&\leq \liminf\left(  \int |\widetilde{f_n}| +  |\widetilde{g}| d\mu \right) \quad \text{Fatou }\\
-&= \liminf\left(  \int |\widetilde{f_n}| d\mu  +  \int |\widetilde{g}| d\mu \right) \\
-&\leq \int |\widetilde{g}| d\mu + \liminf \left( \int  |\widetilde{f_n}| d\mu\right)
+$\bullet$ $\forall n\geq 1, |\widetilde{f_n}|\leq \widetilde{g}$ donc les $\widetilde{f_n}$ intégrables. On a de plus $|\widetilde{f}|\leq \widetilde{g} $ donc $\widetilde{f}$ intégrable. \newline \newline
+On montre facilement le lemme suivant: si $a\in \mathbb R$ et $(b_n)$ est une suite réelle, $\liminf (a+b_n) =a + \liminf b_n$. \newline
+L'inégalité $|\widetilde{f_n}|\leq \widetilde{g}$ implique $\widetilde{f_n} + \widetilde{g}\geq 0$.
+Le lemme de Fatou donne alors $$\begin{aligned} \int \widetilde{f} d\mu + \int \widetilde{g} d\mu  
+&=  \int \left(\widetilde{f} +  \widetilde{g}\right) d\mu \quad \quad \text{car $\widetilde{f}$ et $\widetilde{g}$ intégrables}\\
+&= \int \liminf \left(\widetilde{f_n} + \widetilde{g} \right) d\mu \quad \quad \text{par le lemme}\\
+&\leq \liminf  \int \left(\widetilde{f_n} + \widetilde{g} \right) d\mu  \quad \quad \text{Fatou }\\
+&= \liminf\left(  \int \widetilde{f_n} d\mu  +  \int \widetilde{g} d\mu \right) \\
+&= \liminf\left(  \int \widetilde{f_n} d\mu  \right) + \int \widetilde{g} d\mu \quad \quad \text{par le lemme}
 \end{aligned}$$\newline
-Donc $$ \int |\widetilde{f}| d\mu \leq \liminf \left( \int  |\widetilde{f_n}| d\mu\right)$$\newline
-On a de même $g-\widetilde{f_n}\geq |\widetilde{f_n}| -\widetilde{f_n} \geq 0$, donc 
-$$\begin{aligned} 0 \leq  \int |\widetilde{g}| d\mu - \int |\widetilde{f}| d\mu 
-&=  \int |\widetilde{g}| -  |\widetilde{f}| d\mu \\
-&= \int \liminf|\widetilde{g}| + \liminf \left(-|\widetilde{f_n}|\right)  d\mu\\
-&\leq \int \liminf \left( |\widetilde{g}| -  |\widetilde{f_n}| \right)d\mu \quad \text{intégration d'une inégalité entre fonctions positives}  \\
-&\leq \liminf\left(  \int |\widetilde{g}| -  |\widetilde{f_n}| d\mu \right) \\
-&= \liminf\left(  \int |\widetilde{g}| d\mu  -  \int |\widetilde{f_n}| d\mu \right) \\
-&\leq \int |\widetilde{g}| d\mu + \liminf \left( \int  |\widetilde{f_n}| d\mu\right)
-\end{aligned}$$
+Donc $$ \int \widetilde{f} d\mu \leq \liminf \left( \int  \widetilde{f_n} d\mu\right)$$\newline
+On a de même $\widetilde{g}-\widetilde{f_n}\geq 0$, donc 
+$$\begin{aligned} \int \widetilde{g} d\mu - \int \widetilde{f} d\mu  
+&=  \int \left(\widetilde{g} -  \widetilde{f}\right) d\mu \quad \quad \text{car $\widetilde{f}$ et $\widetilde{g}$ intégrables}\\
+&= \int \liminf \left(\widetilde{g} - \widetilde{f_n} \right) d\mu \quad \quad \text{par le lemme}\\
+&\leq \liminf  \int \left(\widetilde{g} - \widetilde{f_n} \right) d\mu  \quad \quad \text{Fatou }\\
+&= \liminf\left(  \int \widetilde{g} d\mu  - \int \widetilde{f_n} d\mu \right) \\
+&=  \int \widetilde{g} d\mu   + \liminf\left( -\int \widetilde{f_n} d\mu\right) \quad \quad \text{par le lemme}\\
+&=  \int \widetilde{g} d\mu   - \limsup\left( \int \widetilde{f_n} d\mu\right)
+\end{aligned}$$\newline
+Donc $$ \int \widetilde{f} d\mu \geq \limsup \left( \int  \widetilde{f_n} d\mu\right)$$\newline
+
+Conclusion: $\limsup \left( \int  \widetilde{f_n} d\mu\right) = \liminf \left( \int  \widetilde{f_n} d\mu\right) = \int \widetilde{f} d\mu$ \newline
+Ceci implique $\int \widetilde{f_n} d\mu \to \int \widetilde{f} d\mu$. Comme $E^c$ est de mesure nulle, on peut écrire $\int_E \widetilde{f_n} d\mu \to \int_E \widetilde{f} d\mu$ ou encore $\int_E f_n d\mu \to \int_E f d\mu$. Comme $E^c$ est de mesure nulle, on écrit $\int f_n d\mu \to \int f d\mu$.
 
 
 \end{document}
